NXP-33000: Remove CoreFeature from children features